--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer aria-label="page footer" class="bg-black text-white pt-60 pb-40">
-  <div class="container flex flex-wrap md:grid md:grid-cols-12 md:gap-x-20 md:gap-y-26">
-    <a href="/" class="block relative w-full max-w-[160px] md:col-span-4 md:max-w-[340px]">
+  <div class="container flex flex-wrap sm:grid sm:grid-cols-12 sm:gap-x-20 sm:gap-y-26">
+    <a href="/" class="block relative w-full max-w-[160px] sm:col-span-4 sm:max-w-[340px]">
       <span class="sr-only">Home</span>
       <span aria-hidden="true">{% include footer-logo.html %}</span>
     </a>
-    <ul class="footer-nav flex-1 text-right md:text-left md:col-span-6 md:col-start-7 md:text-right md:grid md:grid-cols-2 md:gap-x-20 md:gap-y-10 text-28 md:text-50 leading-[120%] md:leading-[100%] font-medium">
+    <ul class="footer-nav flex-1 text-right sm:text-left sm:col-span-6 sm:col-start-7 sm:text-right sm:grid sm:grid-cols-2 sm:gap-x-20 sm:gap-y-10 text-28 md:text-50 leading-[120%] sm:leading-[100%] font-medium">
       <li>
         <a class="interactive-link" href="{{ site.baseurl }}/our-work/">Our Work</a>
       </li>
@@ -24,7 +24,7 @@
           <a class="interactive-link" href="{{ site.baseurl }}/contact/">Contact</a>
       </li>
     </ul>
-    <div class="md:col-span-12 flex items-center justify-end gap-15 w-full self-end pt-32 pb-40 md:pt-0 md:pb-0">
+    <div class="sm:col-span-12 flex items-center justify-end gap-15 w-full self-end pt-32 pb-40 sm:pt-0 sm:pb-0">
       <a href="{{ site.github_url}}" target="_blank">
         <span class="sr-only">LIL on Github</span>
         <span aria-hidden="true">{% include icon-github.html %}</span>
@@ -38,8 +38,8 @@
         <span aria-hidden="true">{% include icon-linkedin.html %}</span>
       </a>
     </div>
-    <div class="w-full flex flex-col md:flex-row md:items-center md:justify-between md:gap-20 pt-24 border-t-1 border-white md:col-span-12 text-12 md:text-16">
-      <div class="flex flex-col md:flex-row md:items-center md:gap-100">
+    <div class="w-full flex flex-col sm:flex-row sm:items-center sm:justify-between sm:gap-20 pt-24 border-t-1 border-white sm:col-span-12 text-12 sm:text-16">
+      <div class="flex flex-col sm:flex-row sm:items-center sm:gap-100">
         <p>&copy;2024 The President and Fellows of Harvard University</p>
       </div>
       <p><a href="https://accessibility.huit.harvard.edu/digital-accessibility-policy">Accessibility</a></p>
