--- a/app/_layouts/post.html
+++ b/app/_layouts/post.html
@@ -3,14 +3,14 @@ layout: default
 custom-css: ['post-content']
 ---
 
-<section class="container pt-50 md:pt-80 pb-100">
+<section class="container pt-50 md:pt-80">
   <div class="flex flex-col gap-50 md:gap-120 mb-14 md:mb-56">
     {% include tag-filter.html tags=page.tags %}
     <div class="flex flex-col items-start gap-10 md:gap-20">
       <nav aria-label="breadcrumbs">
         <a href="{{ site.baseurl }}/blog/" class="label interactive-link dark reverse">Blog</a>
       </nav>
-      <div class="flex flex-col md:grid md:grid-cols-3 gap-14 md:gap-32 pb-40 md:pb-80 border-b-1 border-black">
+      <div class="flex flex-col md:grid gap-14 md:gap-32 pb-40 border-b-1 border-black">
         <h1 class="h2">{{page.title}}</h1>
       </div>
     </div>
