--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -10,7 +10,7 @@
       </a>
     </lil-marquee>
   {% endif %}
-  <header class="pt-32 container">
+  <header class="pt-12 md:pt-36 container">
     <div class="flex items-center justify-between">
       <div aria-hidden class="opacity-0 w-[40px] md:w-[56px]"></div>
       <a href="/" class="logo">
