--- a/app/_includes/project-card.html
+++ b/app/_includes/project-card.html
@@ -4,19 +4,19 @@
       <img src="{{ site.baseurl }}/assets/images/featured-project-text.svg" class="w-full h-full object-contain" alt="Featured Project" />
     </div>
   {% endif %}
-  <div class="{{ include.background }} pt-60 pb-20 md:pt-0 md:pb-0 flex flex-col md:grid md:grid-cols-2 md:items-center relative overflow-hidden md:min-h-[550px]">
-    <div class="flex items-start justify-start md:items-center md:justify-center px-28 md:px-0 pb-28 md:pb-0">
+  <div class="{{ include.background }} pt-36 pb-12 md:pt-0 md:pb-0 flex flex-col md:grid md:grid-cols-2 md:items-center relative overflow-hidden md:min-h-[550px]">
+    <div class="flex items-start justify-start md:items-center md:justify-center px-28 md:px-0 pb-18 md:pb-0">
       <img class="w-full max-w-[200px] max-h-[140px] md:max-w-[350px] md:max-h-[300px] object-contain object-left md:object-center w-[150px] h-[150px] md:w-[200px] md:h-[200px]" src="{{ site.baseurl }}/assets/images/{{ include.logo }}" alt="{{ include.title }}">
     </div>
-    <div class="w-full p-28 md:p-80 flex flex-col gap-18 md:gap-30">
+    <div class="w-full p-28 pt-0 md:p-80 flex flex-col gap-18 md:gap-30">
       <strong class="h2">{{ include.title }}</strong>
       <p class="body-text max-w-[550px]">{{ include.description }}</p>
       <div class="flex flex-col md:flex-row md:items-center gap-18 md:gap-32 pt-10 md:pt-20">
         {% if include.linkOne %}
-          {% include arrow-link.html label=include.linkOneLabel href=include.linkOne target="_blank" %}
+          {% include arrow-link.html label=include.linkOneLabel href=include.linkOne target="_blank" reverse=true %}
         {% endif %}
         {% if include.linkTwo %}
-        {% include arrow-link.html label=include.linkTwoLabel href=include.linkTwo target="_self" %}
+        {% include arrow-link.html label=include.linkTwoLabel href=include.linkTwo target="_self" reverse=true %}
         {% endif %}
       </div>
     </div>
