--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer aria-label="page footer" class="bg-black text-white pt-24 pb-24 sm:pt-60 sm:pb-40">
-  <div class="container flex flex-wrap sm:grid sm:grid-cols-12 sm:gap-x-20 sm:gap-y-26">
+  <div class="nav-container flex flex-wrap sm:grid sm:grid-cols-12 sm:gap-x-20 sm:gap-y-26">
     <a href="/" class="block relative w-full max-w-[160px] sm:col-span-4 sm:max-w-[340px]">
       <span class="sr-only">Home</span>
       <span aria-hidden="true">{% include footer-logo.html %}</span>
