--- a/app/_includes/project-card.html
+++ b/app/_includes/project-card.html
@@ -4,7 +4,7 @@
       <img src="{{ site.baseurl }}/assets/images/featured-project-text.svg" class="w-full h-full object-contain" alt="Featured Project" />
     </div>
   {% endif %}
-  <div class="{{ include.background }} pt-36 pb-12 md:pt-0 md:pb-0 flex flex-col md:grid md:grid-cols-2 md:items-center relative overflow-hidden md:min-h-[550px]">
+  <div class="{{ include.background }} pt-36 pb-12 md:pt-0 md:pb-0 flex flex-col md:grid md:grid-cols-2 md:items-center relative overflow-hidden">
     <div class="flex items-start justify-start md:items-center md:justify-center px-28 md:px-0 pb-18 md:pb-0">
       <img class="w-full max-w-[200px] min-h-[140px] max-h-[140px] md:max-w-[350px] md:max-h-[300px] object-contain object-left md:object-center" src="{{ site.baseurl }}/assets/images/{{ include.logo }}" alt="{{ include.title }}">
     </div>
