Add additional intermediate tablet breakpoint.

--- a/app/_includes/project-card.html
+++ b/app/_includes/project-card.html
@@ -1,26 +1,26 @@
-<div class="relative block container {% if include.featured %}pt-80 md:pt-120{% endif %}">
+<div class="relative block container {% if include.featured %}pt-80 tbl:pt-120{% endif %}">
   {% if include.featured %}
-    <div class="absolute w-72 h-72 md:w-165 md:h-165 top-45 left-24 md:top-40 md:left-50 z-[2] motion-safe:animate-spin">
+    <div class="absolute w-72 h-72 tbl:w-165 tbl:h-165 top-45 left-24 tbl:top-40 tbl:left-50 z-[2] motion-safe:animate-spin">
       <img src="{{ site.baseurl }}/assets/images/featured-project-text.svg" class="w-full h-full object-contain" alt="Featured Project" />
     </div>
   {% endif %}
-  <div class="{{ include.background }} pt-36 pb-12 md:pt-0 md:pb-0 flex flex-col md:grid md:grid-cols-2 md:items-center relative overflow-hidden">
-    <div class="flex items-start justify-start md:items-center md:justify-center px-28 md:px-0 pb-18 md:pb-0">
-      <img class="w-full max-w-[200px] min-h-[140px] max-h-[140px] md:max-w-[350px] md:max-h-[300px] object-contain object-left md:object-center" src="{{ site.baseurl }}/assets/images/{{ include.logo }}" alt="{{ include.title }}">
+  <div class="{{ include.background }} pt-36 pb-12 tbl:pt-0 tbl:pb-0 flex flex-col tbl:grid tbl:grid-cols-2 tbl:items-center relative overflow-hidden">
+    <div class="flex items-start justify-start tbl:items-center tbl:justify-center px-28 tbl:px-0">
+      <img class="w-full max-w-[135px] min-h-[140px] max-h-[140px] tbl:max-w-[350px] tbl:max-h-[300px] object-contain object-left tbl:object-center" src="{{ site.baseurl }}/assets/images/{{ include.logo }}" alt="{{ include.title }}">
     </div>
-    <div class="w-full p-28 pt-0 md:p-80 flex flex-col gap-18 md:gap-30">
+    <div class="w-full p-28 pt-0 tbl:p-80 flex flex-col gap-18 tbl:gap-30">
       <strong class="h2">{{ include.title }}</strong>
-      <p class="body-text max-w-[550px]">{{ include.description }}</p>
-      <div class="flex flex-col md:flex-row md:items-center gap-18 md:gap-32 pt-10 md:pt-20">
+      <p class="body-text">{{ include.description }}</p>
+      <div class="flex flex-col tbl:flex-row tbl:items-center gap-18 tbl:gap-32 pt-10 tbl:pt-20 whitespace-nowrap">
         {% if include.linkOne %}
-          {% include arrow-link.html label=include.linkOneLabel href=include.linkOne target="_blank" reverse=true %}
+          <span>{% include arrow-link-inline.html label=include.linkOneLabel href=include.linkOne target="_blank" reverse=true %}</span>
         {% endif %}
         {% if include.linkTwo %}
-        {% include arrow-link.html label=include.linkTwoLabel href=include.linkTwo target="_self" reverse=true %}
+          <span>{% include arrow-link-inline.html label=include.linkTwoLabel href=include.linkTwo target="_self" reverse=true %}</span>
         {% endif %}
       </div>
     </div>
-    <div aria-hidden="true" class="absolute w-[150px] h-[150px] bg-white top-0 left-0 rotate-45 -translate-y-[75%] -translate-x-[75%] md:-translate-y-[60%] md:-translate-x-[60%]"></div>
-    <div aria-hidden="true" class="absolute w-[150px] h-[150px] bg-white bottom-0 right-0 rotate-45 translate-x-[75%] translate-y-[75%] md:translate-y-[60%] md:translate-x-[60%]"></div>
+    <div aria-hidden="true" class="absolute w-[150px] h-[150px] bg-white top-0 left-0 rotate-45 -translate-y-[75%] -translate-x-[75%] tbl:-translate-y-[60%] tbl:-translate-x-[60%]"></div>
+    <div aria-hidden="true" class="absolute w-[150px] h-[150px] bg-white bottom-0 right-0 rotate-45 translate-x-[75%] translate-y-[75%] tbl:translate-y-[60%] tbl:translate-x-[60%]"></div>
   </div>
 </div>
