Add an intermediate featured project tag size.

--- a/app/_includes/project-card.html
+++ b/app/_includes/project-card.html
@@ -1,6 +1,6 @@
 <div class="relative block container {% if include.featured %}pt-84 tbl:pt-120{% endif %}">
   {% if include.featured %}
-    <div class="absolute w-72 h-72 tbl:w-165 tbl:h-165 top-48 left-12 sm:left-0 tbl:top-36 z-[2] motion-safe:animate-spin">
+    <div class="absolute w-72 h-72 tbl:w-136 tbl:h-136 md:w-165 md:h-165 top-48 left-12 sm:left-0 tbl:top-52 md:top-36 z-[2] motion-safe:animate-spin">
       <img src="{{ site.baseurl }}/assets/images/featured-project-text.svg" class="w-full h-full object-contain" alt="Featured Project" />
     </div>
   {% endif %}
