--- a/app/_layouts/event.html
+++ b/app/_layouts/event.html
@@ -9,9 +9,10 @@ custom-css: ['post-content']
       <nav aria-label="breadcrumbs">
         <a href="/events" class="label interactive-link dark reverse">Events</a>
       </nav>
-      <div class="flex flex-col md:grid gap-32 pb-40 border-b-1 border-black">
+      <div class="w-full flex flex-col md:grid gap-32 pb-40 border-b-1 border-black">
         <h1 class="h2">
           {{page.title}}
+          <br>
           <time class="post-date" datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %-d, %Y" }}</time>
         </h1>
       </div>
