--- a/app/_layouts/post.html
+++ b/app/_layouts/post.html
@@ -10,7 +10,7 @@ custom-css: ['post-content']
       <nav aria-label="breadcrumbs">
         <a href="{{ site.baseurl }}/blog/" class="label interactive-link dark reverse">Blog</a>
       </nav>
-      <div class="flex flex-col md:grid gap-14 md:gap-32 pb-40 border-b-1 border-black">
+      <div class="w-full flex flex-col md:grid gap-14 md:gap-32 pb-40 border-b-1 border-black">
         <h1 class="h2">{{page.title}}</h1>
       </div>
     </div>
