Every page, same padding between content and footer.

--- a/app/_layouts/post.html
+++ b/app/_layouts/post.html
@@ -17,7 +17,7 @@ custom-css: ['post-content']
   </div>
 </section>
 <section class="container post">
-  <article role="article" itemscope itemtype="http://schema.org/BlogPosting" class="flex flex-col gap-24 md:grid md:grid-cols-12 body-text pb-150">
+  <article role="article" itemscope itemtype="http://schema.org/BlogPosting" class="flex flex-col gap-24 md:grid md:grid-cols-12 body-text pb-72 md:pb-84">
     <header class="grid grid-cols-2 md:flex md:col-span-3">
       <time class="post-date" datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %-d, %Y" }}</time>
       <div class="md:hidden">
