Set footer spacing in one spot.

--- a/app/_includes/contact-section.html
+++ b/app/_includes/contact-section.html
@@ -1,4 +1,4 @@
-<section class="container pb-72 md:pb-84">
+<section class="container">
   <div class="flex flex-col md:grid md:grid-cols-3 gap-6 md:gap-40">
     <h2 class="h2">{{ include.heading }}</h2>
     <div class="md:col-span-2 body-text flex flex-col pt-24 flex flex-col md:grid md:grid-cols-2 gap-32">
