--- a/app/_layouts/project.html
+++ b/app/_layouts/project.html
@@ -12,7 +12,7 @@ layout: default
   </div>
 </section>
 
-<div class="flex flex-col gap-40 md:gap-80 items-start pb-72 md:pb-84">
+<div class="flex flex-col gap-40 md:gap-80 items-start">
 
   <section class="container flex flex-col gap-120">
     <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40">
