--- a/app/_layouts/tag_or_category.html
+++ b/app/_layouts/tag_or_category.html
@@ -5,7 +5,7 @@ pagination:
 custom-css: ['blog-search']
 ---
 
-<section class="pt-40 md:pt-80 pb-72 md:pb-84">
+<section class="pt-40 md:pt-80">
 
   <div class="container flex flex-col gap-50 mb-56">
     {% include tag-filter.html %}
