--- a/app/_layouts/event.html
+++ b/app/_layouts/event.html
@@ -20,7 +20,7 @@ custom-css: ['post-content']
   </div>
 </section>
 <section class="container post">
-  <article role="article" itemscope itemtype="http://schema.org/BlogPosting" class="flex flex-col gap-24 md:grid md:grid-cols-12 body-text pb-72 md:pb-84">
+  <article role="article" itemscope itemtype="http://schema.org/BlogPosting" class="flex flex-col gap-24 md:grid md:grid-cols-12 body-text">
     <div class="md:col-span-8 md:col-start-3" itemprop="articleBody">
         {% if page.banner %}
           <img src="{{ site.baseurl }}/assets/images/events/{{ page.banner }}"
