--- a/app/_includes/about-people-affiliated.html
+++ b/app/_includes/about-people-affiliated.html
@@ -23,7 +23,7 @@
         {{ person.bio | strip | markdownify }}
       </div>
 
-      {% if person.email or person.website or person.twitter or person.github %}
+      {% if person.email or person.website or person.twitter_account_name or person.github_account_name or person.mastodon_url %}
         <ul class="social">
           {% if person.email %}
             <li>email: <a href="mailto:{{ person.email }}">{{ person.email }}</a></li>
@@ -33,6 +33,11 @@
           {% endif %}
           {% if person.twitter_account_name %}
             <li>twitter: <a href="https://www.twitter.com/{{ person.twitter_account_name}}">@{{ person.twitter_account_name }}</a></li>
+          {% endif %}
+          {% if person.mastodon_url %}
+            {% assign mastodon_url_parts = person.mastodon_url | split: "/" %}
+            {% assign mastodon_handle = mastodon_url_parts[3] | append: "@" | append: mastodon_url_parts[2] %}
+            <li>mastodon: <a href="{{ person.mastodon_url }}">{{ mastodon_handle }}</a></li>
           {% endif %}
           {% if person.github_account_name %}
             <li>github: <a href="https://www.github.com/{{ person.github_account_name }}">{{ person.github_account_name }}</a></li>
