Remove engineering manager listing.

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,6 +1,6 @@
 <lil-header class="block relative z-header">
   {% if page.slug == "home" %}
-    {% include hiring-banner.html title="Software Engineering Manager" %}
+    <!-- {% include hiring-banner.html title="Software Engineering Manager" %} -->
   {% endif %}
   <header class="pt-12 md:pt-36 nav-container">
     <div class="flex items-center justify-between">
